package com.simra.konsumgandalf.common.models.entities;

import com.fasterxml.jackson.annotation.JsonBackReference;
import com.fasterxml.jackson.annotation.JsonIgnore;
import com.fasterxml.jackson.annotation.JsonManagedReference;
import com.simra.konsumgandalf.common.models.enums.SimraRegionGroup;
import com.simra.konsumgandalf.common.models.maps.SimraRegionEnumNameMapper;
import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.JoinTable;
import jakarta.persistence.ManyToMany;
import jakarta.persistence.OneToMany;
import org.locationtech.jts.geom.Geometry;

import java.util.List;
import java.util.Optional;

/**
 * Contains multiple regions to a super region.
 */
@Entity
public class SimraRegion {

	private static final SimraRegionEnumNameMapper simraRegionEnumNameMapper = new SimraRegionEnumNameMapper();

	@Id
	@Column
	private String name;

	/**
	 * The group of the region necessary for the profile assignment.
	 */
	@Column(nullable = true)
	@Enumerated(EnumType.STRING)
	private SimraRegionGroup simraRegionGroup;

	@JsonIgnore
	@OneToMany(cascade = CascadeType.ALL, mappedBy = "simraRegion")
	private List<Profile> profileEntities;

	@OneToMany(cascade = CascadeType.ALL, mappedBy = "region")
	@JsonBackReference
	private List<SafetyMetricsSimraRegion> safetyMetricsSimraRegions;

	@ManyToMany(cascade = CascadeType.ALL, fetch = jakarta.persistence.FetchType.LAZY)
	@JoinTable(name = "simra_region_region",
			joinColumns = @JoinColumn(name = "simra_region_name", referencedColumnName = "name"),
			inverseJoinColumns = @JoinColumn(name = "region_name", referencedColumnName = "name"))
	@JsonManagedReference
	private List<Region> regions;

	/**
	 * Automatically generated by a trigger in the database.
	 */
	@Column
	Geometry way;

	public SimraRegion() {
	}

	public SimraRegion(String name) {
		this.name = name;

		Optional<SimraRegionGroup> simraRegionGroup = simraRegionEnumNameMapper.getEnumForName(name);
		if (simraRegionGroup.isPresent()) {
			this.simraRegionGroup = simraRegionGroup.get();
		}
	}

	public SimraRegion(SimraRegionGroup simraRegionGroup) {
		this.simraRegionGroup = simraRegionGroup;

		Optional<String> name = simraRegionEnumNameMapper.getNameForEnum(simraRegionGroup);
		if (name.isPresent()) {
			this.name = name.get();
		}
	}

	public String getName() {
		return name;
	}

	public void setName(String name) {
		this.name = name;
	}

	public List<Region> getRegions() {
		return regions;
	}

	public void setRegions(List<Region> regions) {
		this.regions = regions;
	}

	public List<SafetyMetricsSimraRegion> getSafetyMetricsSimraRegions() {
		return safetyMetricsSimraRegions;
	}

	public void setSafetyMetricsSimraRegions(List<SafetyMetricsSimraRegion> safetyMetricsSimraRegions) {
		this.safetyMetricsSimraRegions = safetyMetricsSimraRegions;
	}

	public Geometry getWay() {
		return way;
	}

	public void setWay(Geometry way) {
		this.way = way;
	}

	public SimraRegionGroup getSimraRegionGroup() {
		return simraRegionGroup;
	}

	public void setSimraRegionGroup(SimraRegionGroup simraRegionGroup) {
		this.simraRegionGroup = simraRegionGroup;
	}

	public List<Profile> getProfileEntities() {
		return profileEntities;
	}

	public void setProfileEntities(List<Profile> profileEntities) {
		this.profileEntities = profileEntities;
	}

}
